--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^1.6.4",
     "@heroicons/react": "^1.0.6",
     "clsx": "^1.1.1",
+    "framer-motion": "^6.3.10",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0"
