--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-slick": "^0.29.0",
+    "react-transition-group": "^4.4.2",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
