--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.6.4",
     "@heroicons/react": "^1.0.6",
+    "@react-spring/parallax": "^9.4.5",
     "clsx": "^1.1.1",
     "framer-motion": "^6.3.10",
     "next": "12.1.6",
